# FIIT_FA_SP

./: .gitignore  CMakeLists.txt  README.md
allocator/allocator_boundary_tags/include/: allocator_boundary_tags.h
allocator/allocator_boundary_tags/src/: allocator_boundary_tags.cpp
allocator/allocator_boundary_tags/tests/: allocator_boundary_tags_tests.cpp
allocator/allocator_buddies_system/include/: allocator_buddies_system.h
allocator/allocator_buddies_system/src/: allocator_buddies_system.cpp
allocator/allocator_buddies_system/tests/: allocator_buddies_system_tests.cpp
allocator/allocator_global_heap/src/: allocator_global_heap.cpp
allocator/allocator_sorted_list/src/: allocator_sorted_list.cpp
allocator/allocator_sorted_list/tests/: allocator_sorted_list_tests.cpp
arithmetic/big_integer/include/: big_int.h
arithmetic/big_integer/src/: big_int.cpp
arithmetic/fraction/src/: fraction.cpp
associative_container/search_tree/binary_search_tree/AVL_tree/include/: AVL_tree.h
associative_container/search_tree/binary_search_tree/include/: binary_search_tree.h
associative_container/search_tree/binary_search_tree/tests/: CMakeLists.txt  binary_search_tree_tests.cpp
associative_container/search_tree/indexing_tree/b_tree/include/: b_tree.h
associative_container/search_tree/indexing_tree/b_tree/tests/: b_tree_tests.cpp
associative_container/search_tree/indexing_tree/b_tree_disk/include/: b_tree_disk.hpp
associative_container/search_tree/indexing_tree/b_tree_disk/tests/: b_tree_disk_tests.cpp
logger/client_logger/include/: client_logger.h
logger/client_logger/src/: client_logger.cpp  client_logger_builder.cpp
logger/client_logger/tests/: client_logger_tests.cpp  set.json
logger/server_logger/: CMakeLists.txt
logger/server_logger/include/: server_logger.h  server_logger_builder.h
logger/server_logger/src/: server_logger.cpp  server_logger_builder.cpp
logger/server_logger/tests/: CMakeLists.txt  config.json  server.cpp  server.h  server_logger_tests.cpp  server_test.cpp
